ENO-239 - Ensure the multibuy tooltip is always clearly visible for any screensize or pricepoint

--- a/great-western-wine-theme/assets/scss/components/custom/_add-to-cart.scss
+++ b/great-western-wine-theme/assets/scss/components/custom/_add-to-cart.scss
@@ -231,6 +231,16 @@
         .sticky-multi-price {
             .multibuy-price-title {
                 position: relative;
+            
+                .tooltip-text {
+                    @include breakpoint("medium") {
+                        bottom: calc(100% + 5px);
+                        left: -65px;
+                        margin-left: 0;
+                        width: 270px;
+                        text-align: center;
+                    }
+                }
             }    
         }
 
